--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
             </form>
         </div>
     </main>
+    <!--
+    <footer>
+        <div id="foot">
+            <ul style="border-style: dotted; overflow: auto; padding-top: 100px;">
+                <li class="lowli">
+                    One
+                </li>
+                <li class="lowli">
+                    Two
+                </li>
+                <li class="lowli">
+                    Three
+                </li>
+            </ul>
+        </div>
+    </footer> -->
     
 </body>
 </html>
