--- a/about.html
+++ b/about.html
@@ -14,13 +14,13 @@
                    <a href="./index.html" style="text-decoration: none; color: white;">Home</a>
                 </li >
                 <li class="le">
-                   <a href="" style="text-decoration: none; color: white;"">About</a>
+                   <a href="./about.html" style="text-decoration: none; color: white;"">About</a>
                 </li>
                 <li class="le">
                     <a href="" style="text-decoration: none; color: white;"">Contact</a>
                 </li>
                 <li class="le" id="last">
-                    <a href="" style="text-decoration: none; color: white;">Goofy Images</a>
+                    <a href="./goofyimag.html" style="text-decoration: none; color: white;">Goofy Images</a>
                 </li>
                 
             </ul>
